# AdminBiblioProyecto

./: .gitignore  Contenedor.h  Nodo.h  README.md
Practica-I/: Book.cpp  Book.h  CMakeLists.txt  FilesManager.cpp  FilesManager.h  Magazine.cpp  Magazine.h  Material.cpp  Material.h  Utilities.h  main.cpp
ProyectoI/: CMakeLists.txt  Contenedor.h  Nodo.h  main.cpp  mainPruebas.cpp
ProyectoI/Controlador/: AdminArchivos.cpp  AdminArchivos.h  GestorMateriales.cpp  GestorMateriales.h  GestorPrestamos.cpp  GestorPrestamos.h  GestorUsuarios.cpp  GestorUsuarios.h
ProyectoI/Modelo/: Contenedor.h  EnLinea.cpp  EnLinea.h  Excepciones.h  Fisico.cpp  Fisico.h  Libro.cpp  Libro.h  Material.cpp  Material.h  MaterialDigital.cpp  MaterialDigital.h  Nodo.h  Prestamo.cpp  Prestamo.h  Revista.cpp  Revista.h  Serializacion.cpp  Serializacion.h  Usuario.cpp  Usuario.h
ProyectoI/Vista/: MenuMateriales.cpp  MenuMateriales.h  MenuPrestamos.cpp  MenuPrestamos.h  MenuPrincipal.cpp  MenuPrincipal.h  MenuReportes.cpp  MenuReportes.h  MenuUsuarios.cpp  MenuUsuarios.h
